--- a/benchmarks/FSharp.FIO.Benchmarks.Plots/FSharp.FIO.Benchmarks.Plots.fsproj
+++ b/benchmarks/FSharp.FIO.Benchmarks.Plots/FSharp.FIO.Benchmarks.Plots.fsproj
@@ -1,9 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<OutputType>Exe</OutputType>
 		<WarningsAsErrors>true</WarningsAsErrors>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
 
     <ItemGroup>
@@ -21,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Update="FSharp.Core" Version="9.0.303" />
+        <PackageReference Update="FSharp.Core" Version="10.0.100" />
 	</ItemGroup>
 
 </Project>
