Added F# 10 CE functions

--- a/benchmarks/FSharp.FIO.Benchmarks/Properties/launchSettings.json
+++ b/benchmarks/FSharp.FIO.Benchmarks/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FSharp.FIO.Benchmarks": {
       "commandName": "Project",
-      "commandLineArgs": "--cooperative-runtime 39 200 1 --runs 30 --bang 50000 1 --save true"
+      "commandLineArgs": "--concurrent-runtime 39 200 1 --runs 30 --pingpong 150000 --threadring 10000 10 --big 250 10 --bang 10000 10 --fork 20000"
     }
   }
 }
