--- a/benchmarks/FSharp.FIO.Benchmarks/FSharp.FIO.Benchmarks.fsproj
+++ b/benchmarks/FSharp.FIO.Benchmarks/FSharp.FIO.Benchmarks.fsproj
@@ -8,6 +8,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
+		<ParallelCompilation>true</ParallelCompilation>
+		<Deterministic>false</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
