--- a/examples/FSharp.FIO.Examples.App/FSharp.FIO.Examples.App.fsproj
+++ b/examples/FSharp.FIO.Examples.App/FSharp.FIO.Examples.App.fsproj
@@ -8,6 +8,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
+		<ParallelCompilation>true</ParallelCompilation>
+		<Deterministic>false</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
