--- a/src/FSharp.FIO.App/FSharp.FIO.App.fsproj
+++ b/src/FSharp.FIO.App/FSharp.FIO.App.fsproj
@@ -8,6 +8,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
+		<ParallelCompilation>true</ParallelCompilation>
+		<Deterministic>false</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
