--- a/src/FSharp.FIO.Lib/FSharp.FIO.Lib.fsproj
+++ b/src/FSharp.FIO.Lib/FSharp.FIO.Lib.fsproj
@@ -8,6 +8,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
+		<ParallelCompilation>true</ParallelCompilation>
+		<Deterministic>false</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
