--- a/src/FSharp.FIO/FSharp.FIO.fsproj
+++ b/src/FSharp.FIO/FSharp.FIO.fsproj
@@ -16,6 +16,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
+		<ParallelCompilation>true</ParallelCompilation>
+		<Deterministic>false</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
