--- a/src/FSharp.FIO/FSharp.FIO.fsproj
+++ b/src/FSharp.FIO/FSharp.FIO.fsproj
@@ -21,9 +21,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Include="DSL\Core.fs" />
-		<Compile Include="DSL\CE.fs" />
-		<Compile Include="DSL\Ops.fs" />
+		<Compile Include="DSL\Utilities.fs" />
+		<Compile Include="DSL\FIO.Core.fs" />
+		<Compile Include="DSL\FIO.Factories.fs" />
+		<Compile Include="DSL\FIO.Extensions.fs" />
+		<Compile Include="DSL\FIO.Operators.fs" />
+		<Compile Include="DSL\FIO.CE.fs" />
 		<Compile Include="Runtime.Tools\Monitor.fs" />
 		<Compile Include="Runtime.Tools\DeadlockDetector.fs" />
 		<Compile Include="Runtime\Runtime.fs" />
