--- a/src/FSharp.FIO/FSharp.FIO.fsproj
+++ b/src/FSharp.FIO/FSharp.FIO.fsproj
@@ -25,6 +25,7 @@
 
 	<ItemGroup>
 		<Compile Include="DSL\Utilities.fs" />
+		<Compile Include="DSL\Exceptions.fs" />
 		<Compile Include="DSL\Core.fs" />
 		<Compile Include="DSL\Factories.fs" />
 		<Compile Include="DSL\Extensions.fs" />
