--- a/examples/FSharp.FIO.Examples.PostgreSQL/FSharp.FIO.Examples.PostgreSQL.fsproj
+++ b/examples/FSharp.FIO.Examples.PostgreSQL/FSharp.FIO.Examples.PostgreSQL.fsproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\FSharp.FIO\FSharp.FIO.fsproj" />
-    <ProjectReference Include="..\..\src\FSharp.FIO.Experimental\FSharp.FIO.Experimental.fsproj" />
+    <ProjectReference Include="..\..\src\FSharp.FIO.PostgreSQL\FSharp.FIO.PostgreSQL.fsproj" />
     <ProjectReference Include="..\..\src\FSharp.FIO.App\FSharp.FIO.App.fsproj" />
   </ItemGroup>
 
