--- a/benchmarks/FSharp.FIO.Benchmarks/FSharp.FIO.Benchmarks.fsproj
+++ b/benchmarks/FSharp.FIO.Benchmarks/FSharp.FIO.Benchmarks.fsproj
@@ -27,7 +27,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\FSharp.FIO\FSharp.FIO.fsproj" />
-		<ProjectReference Include="..\..\src\FSharp.FIO.Lib\FSharp.FIO.Lib.fsproj" />
+		<ProjectReference Include="..\..\src\FSharp.FIO.Console\FSharp.FIO.Console.fsproj" />
 	</ItemGroup>
 
 	<ItemGroup>
